--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ requires = ["setuptools>=64.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "thinkpy"
+name = "think"
 version = "0.1.9"
-description = "ThinkPy - A language for learning computational thinking"
+description = "Think - A language for learning computational thinking"
 readme = "README.md"
 authors = [
     { name = "Lawrence Wilson Gray", email = "lwgray@gmail.com" }
@@ -26,10 +26,10 @@ dependencies = [
 requires-python = ">=3.7"
 
 [project.urls]
-Homepage = "https://github.com/lwgray/thinkpy"
+Homepage = "https://github.com/lwgray/think"
 Documentation = "https://thinkpy.readthedocs.io/"
-Repository = "https://github.com/lwgray/thinkpy.git"
-Issues = "https://github.com/lwgray/thinkpy/issues"
+Repository = "https://github.com/lwgray/think.git"
+Issues = "https://github.com/lwgray/think/issues"
 
 [tool.setuptools]
 packages = ["thinkpy"]
